# novel_agent

./: .gitignore  Dhuligaon_full_novel.md  README.md  The_son_of_the_soil_full_novel.md
backend/: create_full_novel.py  create_pdf_manual.py  pyproject.toml  sessions.db
backend/app/: agent.py  server.py  tools.py
backend/app/database/: models.py
backend/app/utils/: file_system.py  novel_helpers.py
backend/test_agents/: agent.py
